@@ -1,4 +1,4 @@
-*vifm-app.txt*    For Vifm version 0.13  Last change: 2023 Jul 1
+*vifm-app.txt*    For Vifm version 0.13  Last change: 2023 Jul 11
 
  Email for bugs and suggestions: <xaizek@posteo.net>
 
@@ -5304,6 +5304,14 @@ Menu commands~
 :cnew[er]                                      *vifm-m_:cnewer* *vifm-m_:cnew*
     load a newer navigation menu if there is one.
     See |vifm-menus-history|.
+
+                                               *vifm-m_:grep* *vifm-m_:gr*
+:gr[ep][!] pattern
+:gr[ep][!] -opt...
+:gr[ep][!]
+    the behaviour matches that of non-menu |vifm-:grep| except that no range is
+    accepted.  If active view contained selection before entering menu mode,
+    the command takes it into account.
 
 :exi[t][!]                                     *vifm-m_:exit* *vifm-m_:exi*
 :q[uit][!]                                     *vifm-m_:quit* *vifm-m_:q*
